logo align fix

--- a/src/css/variablesOperations.css
+++ b/src/css/variablesOperations.css
@@ -24,7 +24,6 @@
   --emotion-pictures-with-title-bg-color-custom: var(--bg-color-hover);
   --footer-default-invert-background-color-custom: #471a38;
   --header-default-a-logo-top-custom: calc(61px / 2 - 16px / 2);
-  --header-default-a-logo-top-custom: calc(62px / 2 - 90px / 2);
   --header-default-a-logo-top-mobile-custom: 1em;
   --header-default-a-logo-top-mobile-custom: 2em;
   --header-default-a-menu-icon-background-color-custom: var(--color);
